# genesis-agents

./: .gitignore  ECOSYSTEM_DOCTRINE.md  LICENSE  README.md  pyproject.toml  pytest.ini
src/genesis_agents/: __init__.py
src/genesis_agents/base/: capabilities.py  exceptions.py  genesis_agent.py
src/genesis_agents/communication/: __init__.py  queue_manager.py
src/genesis_agents/registry/: __init__.py  agent_registry.py  discovery.py
tests/: conftest.py  test_communication.py  test_example_agent.py  test_registry.py
tests/python/: test_debug.py  test_manual.py
