# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-agents"
version = "1.0.0"
description = "Agent registry and base classes for Genesis Engine ecosystem - Independent Hub"
authors = [{name = "Genesis Team", email = "team@genesis-engine.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["agents", "ai", "code-generation", "orchestration", "genesis-engine"]

# INDEPENDENCIA: Solo dependencias reales que existen
dependencies = [
    "mcpturbo>=1.0.0",          # Base para comunicación con LLMs
    "pydantic>=2.5.0",          # Validación de datos y configuración
    "typing-extensions>=4.8.0", # Type hints para Python 3.9+
]

[project.optional-dependencies]
# Herramientas de desarrollo
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

# Herramientas adicionales de testing
testing = [
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.3.0",     # Tests paralelos
    "coverage[toml]>=7.3.0",   # Coverage detallado
]

# Documentación
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/genesis-engine/genesis-agents"
Documentation = "https://docs.genesis-engine.dev/agents"
Repository = "https://github.com/genesis-engine/genesis-agents"
Issues = "https://github.com/genesis-engine/genesis-agents/issues"
Changelog = "https://github.com/genesis-engine/genesis-agents/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["genesis_agents*"]

# INDEPENDENCIA: Entry points para que otros paquetes se registren
[project.entry-points."genesis_agents.discovery"]
ecosystem = "genesis_agents.registry.discovery:AgentDiscovery.discover_ecosystem_agents"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "mcpturbo.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=genesis_agents --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow tests",
    "discovery: Agent discovery tests",
]

[tool.coverage.run]
source = ["genesis_agents"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# INDEPENDENCIA: Configuración para auto-discovery sin dependencias forzadas
[tool.genesis-agents]
discovery_paths = [
    "genesis_backend.agents",
    "genesis_frontend.agents", 
    "genesis_devops.agents",
    "genesis_ai.agents",
    "genesis_templates.agents",
    "genesis_performance.agents",
]
use_entry_points = true
enable_local_discovery = false